config/k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-miner
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /spring-admin
            pathType: Prefix
            backend:
              service:
                name: spring-admin
                port:
                  number: 8081
          - path: /video-card-price-aggregator
            pathType: Prefix
            backend:
              service:
                name: video-card-price-aggregator
                port:
                  number: 8081
